Fix navbar secondary content width on mobile

--- a/nebula-components/components/_navbar.scss
+++ b/nebula-components/components/_navbar.scss
@@ -171,9 +171,12 @@
 
 .#{$nb-namespace}c-navbar__item--reset-line-height > * {
   display: inline-block;
-  width: 100%;
   vertical-align: middle;
   line-height: 1.4;
+
+  @include nb-respond-to($nb-nav-bp-key) {
+    width: 100%;
+  }
 }
 
 .#{$nb-namespace}c-navbar__link,
